<resources>
    <string name="app_name">Recovery as a Service</string>
    <string name="icon_name">RaaS</string>
    <string name="tab_text_1">Home</string>
    <string name="tab_text_2">Plan</string>
    <string name="tab_text_3">Work</string>
    <string name="tab_text_4">Users</string>
    <string name="tab_text_5">Info</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="hello_home_fragment">Hello home fragment</string>
    <string name="hello_plan_fragment">Hello plan fragment</string>
    <string name="hello_work_fragment">Hello work fragment</string>

    <string name="welcome_message"><u>Welcome to RaaS!</u></string>
    <string name="please_login"><u>Enter username and password</u></string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="success">success</string>
    <string name="failure">failure</string>
    <string name="login_button_go">Go!</string>

    <string name="activity_create_account_header">"Create New RaaS Profile"</string>
    <string name="activity_create_account_firstname_header">"First Name"</string>
    <string name="activity_create_account_lastname_header">"Last Name"</string>
    <string name="activity_create_account_username_header">"Enter Username"</string>
    <string name="activity_create_account_password_header">"Enter Password"</string>
    <string name="activity_create_account_confirm_password_header">"Confirm Password"</string>
    <string name="activity_create_account_email_address_header">"Email Address"</string>
    <string name="activity_create_account_role_header">"Role"</string>
    <string name="activity_create_account_phone_header">"Phone Number"</string>
    <string name="activity_create_account_height_header">"Enter Height (Inches)"</string>
    <string name="activity_create_account_weight_header">"Enter Weight (Pounds)"</string>
    <string name="activity_create_account_finish_button">"Sign Up"</string>




        <string name="app_design_name">Animated Gradient Background</string>
        <string name="text_logo">Android Tutorials Hub</string>
        <string name="text_hint_email">Email</string>
        <string name="text_hint_password">Password</string>
        <string name="text_login">Login</string>

</resources>
