<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/drawable_gradient_cisco"
    tools:context=".CreateAccountActivity">

    <ScrollView
        android:id="@+id/activityCreateAccountScrollView"
        android:layout_width="353dp"
        android:layout_height="fill_parent"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.533"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/activityCreateAccountHeaderTextView"
                android:layout_width="400dp"
                android:layout_height="wrap_content"
                android:text="@string/activity_create_account_header"
                android:textSize="30sp"
                tools:layout_editor_absoluteX="38dp"
                tools:layout_editor_absoluteY="45dp" />

            <TextView
                android:id="@+id/activityCreateAccountFirstNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_create_account_firstname_header"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="82dp" />

            <EditText
                android:id="@+id/activityCreateAccountFirstNameEditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@+id/activityCreateAccountUsernameTextView"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/activityCreateAccountLastNameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_create_account_lastname_header"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="82dp" />

            <EditText
                android:id="@+id/activityCreateAccountLastNameEditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@+id/activityCreateAccountUsernameTextView"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/activityCreateAccountUsernameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_create_account_email_address_header"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="82dp" />

            <EditText
                android:id="@+id/activityCreateAccountUsernameEditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintTop_toBottomOf="@+id/activityCreateAccountUsernameTextView"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/activityCreateAccountEmailAccountTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_create_account_role_header"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="82dp" />

            <EditText
                android:id="@+id/activityCreateAccountRoleEditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="text"
                app:layout_constraintTop_toBottomOf="@+id/activityCreateAccountUsernameTextView"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/activityCreateAccountPhoneTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_create_account_phone_header"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="82dp" />

            <EditText
                android:id="@+id/activityCreateAccountPhoneEditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="phone"
                app:layout_constraintTop_toBottomOf="@+id/activityCreateAccountUsernameTextView"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/activityCreateAccountHeightTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_create_account_height_header"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="82dp" />

            <EditText
                android:id="@+id/activityCreateAccountHeightEditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="number|numberDecimal"
                app:layout_constraintTop_toBottomOf="@+id/activityCreateAccountUsernameTextView"
                tools:layout_editor_absoluteX="16dp" />

            <TextView
                android:id="@+id/activityCreateAccountWeightTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_create_account_weight_header"
                android:textSize="20sp"
                tools:layout_editor_absoluteX="16dp"
                tools:layout_editor_absoluteY="82dp" />

            <EditText
                android:id="@+id/activityCreateAccountWeightEditText"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:layout_marginTop="8dp"
                android:ems="10"
                android:inputType="number|numberDecimal"
                app:layout_constraintTop_toBottomOf="@+id/activityCreateAccountUsernameTextView"
                tools:layout_editor_absoluteX="16dp" />

            <Button
                android:id="@+id/activityCreateAccountFinishButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/activity_create_account_finish_button"
                android:textSize="18sp" />

        </LinearLayout>
    </ScrollView>

</android.support.constraint.ConstraintLayout>